# OCT_Journal

./: .gitignore  .pre-commit-config.yaml  README.md  dataset_config.json  pyproject.toml
data/octid/.Segmentation/: 06 OS - Copy.jpeg_octSegmentation.mat  10 macula - Copy.jpeg_octSegmentation.mat  105 OD - Copy.jpeg_octSegmentation.mat  108 OD - Copy.jpeg_octSegmentation.mat  14 OS - Copy.jpeg_octSegmentation.mat  176 OSS - Copy.jpeg_octSegmentation.mat  182 OS - Copy.jpeg_octSegmentation.mat  198 OS - Copy.jpeg_octSegmentation.mat  22 OD - Copy.jpeg_octSegmentation.mat  26 OD - Copy.jpeg_octSegmentation.mat  3 macula - Copy.jpeg_octSegmentation.mat  31 OD - Copy.jpeg_octSegmentation.mat  33 OD - Copy.jpeg_octSegmentation.mat  34 OS - Copy.jpeg_octSegmentation.mat  5 macula - Copy.jpeg_octSegmentation.mat  50 OD - Copy.jpeg_octSegmentation.mat  56 OS - Copy.jpeg_octSegmentation.mat  64 OD - Copy.jpeg_octSegmentation.mat  69 OD - Copy.jpeg_octSegmentation.mat  69 OS - Copy.jpeg_octSegmentation.mat  74 OD - Copy.jpeg_octSegmentation.mat  8 macula - Copy.jpeg_octSegmentation.mat  84 OD - Copy.jpeg_octSegmentation.mat  9 macula - Copy.jpeg_octSegmentation.mat  MANIFEST.TXT  Readme.txt
data/octid/AMD/: MANIFEST.TXT
data/octid/CSR/: MANIFEST.TXT
data/octid/DR/: MANIFEST.TXT  Readme.txt
data/octid/MH/: MANIFEST.TXT
data/octid/Normal/: MANIFEST.TXT
reference_csv/: Namsonthi_file_path.csv  OCTID_file_path.csv
src/: create_ref_csv.py  main.py  oct.py  preprocess_ilm.py  preprocess_rpe.py
src/boundary_extraction/: boundary_extraction.py  boundary_extraction_ilm.py  extraction_ilm.py
src/preprocessing/: __init__.py  ilm_rpe.py
src/utils/: image_loading.py
tests/: test_calculator.py
